<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Contenedor de las imagenes de la propiedad -->
        <androidx.cardview.widget.CardView
            android:id="@+id/img_contenedor"
            android:layout_width="379dp"
            android:layout_height="200dp"
            android:layout_marginTop="80dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_propiedad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/property_image_desc"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_foreground" />

        </androidx.cardview.widget.CardView>

        <!-- Título de la propiedad -->
        <TextView
            android:id="@+id/tv_titulo_propiedad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/property_name_placeholder"
            android:textColor="@android:color/black"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_contenedor" />

        <!-- Amenidades -->
        <TextView
            android:id="@+id/tv_amenidades_propiedad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/property_amenities_label"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_titulo_propiedad" />

        <!-- Linea divisoria -->
        <View
            android:id="@+id/divider0"
            android:layout_width="379dp"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_amenidades_propiedad" />

        <!-- Información del propietario -->
        <LinearLayout
            android:id="@+id/info_propietario_contenedor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider0">

            <ImageView
                android:id="@+id/img_propietario"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/host_icon_desc"
                android:src="@android:drawable/ic_menu_myplaces" />

            <TextView
                android:id="@+id/tv_propietario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_host_label"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- Linea divisoria -->
        <View
            android:id="@+id/divider1"
            android:layout_width="379dp"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_propietario_contenedor" />

        <!-- Descripción -->
        <TextView
            android:id="@+id/tv_descripcion_propiedad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/property_description_label"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/divider1" />

        <!-- Linea divisoria -->
        <View
            android:id="@+id/divider2"
            android:layout_width="379dp"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_descripcion_propiedad" />

        <!-- Actividades -->
        <TextView
            android:id="@+id/tv_actividades_propiedad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/property_activities_label"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/divider2" />

        <!-- Linea divisoria -->
        <View
            android:id="@+id/divider3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_actividades_propiedad" />

        <!-- Comodidades -->
        <TextView
            android:id="@+id/tv_comodidades_propiedad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/property_amenities_list_label"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider3" />

        <!-- Linea divisoria -->
        <View
            android:id="@+id/divider4"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_comodidades_propiedad" />

        <TextView
            android:id="@+id/tv_reglas_propiedad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/property_rules_label"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider4" />

        <!-- Divider Line -->
        <View
            android:id="@+id/divider5"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_reglas_propiedad" />

        <!-- Botón de alquilar -->
        <Button
            android:id="@+id/btn_alquilar_propiedad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:text="@string/btn_rent"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider5"
            app:layout_constraintVertical_bias="0.032" />
        
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
